fixed temp alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,20 +39,25 @@ input,
   font-weight: bold;
   font-family: "Kdam Thmor Pro", sans-serif;
   color: rgb(86, 31, 189);
-  line-height: 40px;
+  line-height: 44px;
 }
 .other-temp-character p {
   margin: 0;
 }
 .full-current {
-  padding-right: 0;
+  padding: 12px 0;
+}
+.icon {
+  height: 65px;
+  width: 65px;
 }
 .cur-num {
-  font-size: 35px;
+  font-size: 36px;
   font-family: "Kdam Thmor Pro", sans-serif;
   font-weight: 900;
   color: rgb(4, 161, 4);
-  margin-left: 10px;
+  line-height: 36px;
+  padding-right: 4px;
 }
 .temp-sign {
   text-decoration: none;
@@ -60,7 +65,7 @@ input,
   font-family: "Kdam Thmor Pro", sans-serif;
   font-weight: 900;
   color: rgb(39, 97, 223);
-  line-height: 20px;
+  line-height: 53px;
 }
 .vertical-slash {
   text-decoration: none;
@@ -69,7 +74,7 @@ input,
   font-family: "Kdam Thmor Pro", sans-serif;
   font-weight: 600;
   color: rgb(110, 109, 109);
-  line-height: 20px;
+  line-height: 53px;
 }
 .other-temp-character {
   padding: 12px 11px;
